--- a/style.css
+++ b/style.css
@@ -21,5 +21,5 @@ main{
     height: 500px;
     width: 100vw;
     max-width: 380px;
-    background-color: var(--white);
+    background-color: var(--gray-8);
 }
