--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 main{
-    height: 500px;
+    height: 600px;
     width: 100vw;
     max-width: 380px;
     background-color: var(--gray-8);
@@ -26,6 +26,8 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    
     
 }
 
@@ -40,3 +42,50 @@ img{
     width: 80px;
     border-radius: 50%;
 }
+
+h1{
+    font-size: 25px;
+    margin-top: 10px;
+    margin-bottom: 0;
+   color: var(--white);
+}
+
+p{
+    
+    font-size: 14px;
+}
+
+span{
+    color: var(--white);
+}
+
+.location{
+    color: var(--green);
+    margin-top: 0;
+}
+
+.btns{
+    
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.btns p {
+    color: var(--white);
+    height: 50px;
+    width: 100%;
+    background-color: var(--gray-7);
+    border-radius: 10px;
+    text-align: center;
+    margin: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    
+    
+}
+
