--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
     --green: hsl(75, 94%, 57%);
     --white: hsl(0, 0%, 100%);
     --gray-7:  hsl(0, 0%, 20%);
+    --gray-6:  hsl(0, 1%, 57%);
     --gray-8: hsl(0, 0%, 12%);
     --gray-9: hsl(0, 0%, 8%);
 
 
 }
-
+*{
+    font-family: 'Inter';
+}
 body{
     min-height:100vh;
     background-color: var(--gray-9);
@@ -48,6 +51,7 @@ h1{
     margin-top: 10px;
     margin-bottom: 0;
    color: var(--white);
+   font-weight: 400;
 }
 
 p{
@@ -56,16 +60,21 @@ p{
 }
 
 span{
-    color: var(--white);
+    color: var(--gray-6);
+    font-weight: 400;
+    font-size: 14px;
 }
 
 .location{
     color: var(--green);
-    margin-top: 0;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    
 }
 
 .btns{
-    
+    margin-top: 20px;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -78,12 +87,13 @@ span{
     height: 50px;
     width: 100%;
     background-color: var(--gray-7);
-    border-radius: 10px;
+    border-radius: 8px;
     text-align: center;
-    margin: 10px;
+    margin: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight: 800;
     
     
     
